--- a/myWebSite_4/CSS/style.css
+++ b/myWebSite_4/CSS/style.css
@@ -22,6 +22,11 @@ body {
     font-weight: bold;
 }
 
+.icon {
+    margin-top: 25px;
+    margin-right: 30px;
+}
+
 .main_container h2 {
     display: flex;
     justify-content: center;
